  the end of 2008 and a long period of interregnum.  Hopefully, we
  have that behind us.  This version has major improvements on various
  fronts, especially for imap-folders.  Please read the details
  below. 

  Bug reports should be sent by using M-x vm-submit-bug-report.  Enjoy
  using VM! - Rob, Ulrich and Uday
  

VM 8.1.1-devo

  IMPROVEMENTS:

  ** This version contains an experimental feature of using IMAP
     folders in "headers-only" mode, with body loaded only on demand.
     This helps to keep the folder sizes small and VM to run fast.
     However, this code is in a preliminary stage.  Please use it
     with CAUTION.

     variable: vm-load-headers-only

     If set to t, all new messages will be loaded to the cache-folder
     in headers-only mode.  The body is loaded on demand when a
     message is displayed in its Presentation Buffer.  This is a
     temporary load and is lost as soon as you move to another
     message.  To load the body into the Folder Buffer, use:

     command: vm-refresh-message

     This command discards the current body of the message, if any,
     and refreshes it from the server copy.

     Some of the VM operations, e.g., vm-save-message, can only be
     performed if the body is loaded into the Folder Buffer.

     command : vm-unload-message

     This command discards the current body of the message and leaves
     it empty.

     FAILURE RECOVERY: If the cache folder gets corrupted for any
     reason, just delete it from the file system.  A new cache folder
     will be generated upon the next visit.

  ** The commands `vm-mime-save-all-attachments' and
    `vm-mime-delete-all-attachments' have been moved to the VM core
    (from vm-rfaddons).  New variables:
       vm-mime-deletable-types 
          (formerly `vm-mime-delete-all-attachments-types')
       vm-mime-deletable-type-exceptions
          (formerly `vm-mime-delete-all-attachments-types-exceptions')
       vm-mime-savable-types