@@ -1262,9 +1262,13 @@ summary buffer to select a folder."
         (require 'vm-window)
         (require 'vm-menu)
         (require 'vm-rfaddons)
-        (if (locate-library "pgg")
-            (require 'vm-pgg)
-          (message "vm-pgg disabled since pgg is missing!"))
+	;; The default loading of vm-pgg is disabled because it is an
+	;; add-on.  If and when it is integrated into VM, with advices
+	;; and other add-on features, then it can be loaded by
+	;; default.  USR, 2010-01-14
+        ;; (if (locate-library "pgg")
+        ;;     (require 'vm-pgg)
+        ;;   (message "vm-pgg disabled since pgg is missing!"))
         (add-hook 'kill-emacs-hook 'vm-garbage-collect-global)
         (vm-version)
 	(vm-load-init-file)
